[gd_scene load_steps=6 format=3 uid="uid://4hateayxg5ee"]

[ext_resource type="Script" path="res://levels/Bedroom.gd" id="1_iu6jn"]
[ext_resource type="Texture2D" uid="uid://bvefu1re2t6r5" path="res://art/backgrounds/bedroom.png" id="2_upyd2"]
[ext_resource type="Texture2D" uid="uid://dx48fhw3mrtx4" path="res://art/objects/door.png" id="3_kibqr"]
[ext_resource type="AudioStream" uid="uid://r78jx8jjqwrr" path="res://music/Elevator Music CONSTANT v1 Contreras Woelfle.wav" id="4_4piv5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qiytp"]
size = Vector2(304, 652)

[node name="Bedroom" type="Node2D"]
script = ExtResource("1_iu6jn")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_upyd2")
centered = false

[node name="Door" type="Area2D" parent="."]
position = Vector2(1259, 612)
scale = Vector2(0.6, 0.6)

[node name="DoorSprite" type="Sprite2D" parent="Door"]
position = Vector2(-408.333, -400)
texture = ExtResource("3_kibqr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2(-405, -405)
shape = SubResource("RectangleShape2D_qiytp")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_4piv5")
autoplay = true

[connection signal="input_event" from="Door" to="." method="_on_door_input_event"]
[connection signal="mouse_entered" from="Door" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Door" to="." method="_on_door_mouse_exited"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
